--- a/soft_k_means/Soft_k_means_clustering.ipynb
+++ b/soft_k_means/Soft_k_means_clustering.ipynb
@@ -420,6 +420,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "0e6ddfa5-c25d-4646-a25e-e0c3686732bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 1 2 1 2 2 2 2 0 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
+      " 2 2 1 1 2 2 2 2 2 1 2 2 1 2 2 2 2 2 2 2 2 2 2 2 0 2 1 1 1 1 1 1 2 1 1 1 1\n",
+      " 1 1 2 1 1 1 1 1 2 1 2 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1\n",
+      " 1 1]\n",
+      "[52 50 48]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cluster_assignments = np.argmax(responsibilities, axis=1)\n",
+    "print(cluster_assignments)\n",
+    "counts = np.bincount(cluster_assignments)\n",
+    "print(counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "f6272ccb-3923-41cc-9cf5-9833fd22dee7",
    "metadata": {},
